Add user, CommandProcessor and accurator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=NauJava-TgBotDelivery
+management.endpoints.web.exposure.include=*
+management.server.port=8082
+server.port=8082
+
+app.name=NauJava-TgBotDelivery
+app.version=0.1
