--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ logging.level.root=OFF
 
 app.name=NauJava-TgBotDelivery
 app.version=0.1
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/deliverytg
+spring.datasource.username=postgres
+spring.datasource.password=postgres
