--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/deliverytg
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.generate-ddl=true
