--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,13 @@ logging.level.root=OFF
 
 app.name=NauJava-TgBotDelivery
 app.version=0.1
+app.database.name = deliverytg
+app.database.schema = delivery
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/deliverytg
+spring.datasource.url=jdbc:postgresql://localhost:5432/${app.database.name}?currentSchema=${app.database.schema}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.default_schema=${app.database.schema}
+spring.jpa.hibernate.ddl-auto=update
