--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=NauJava-TgBotDelivery
 management.endpoints.web.exposure.include=*
 management.server.port=8082
 server.port=8082
-logging.level.root=OFF
+#logging.level.root=OFF
 
 app.name=NauJava-TgBotDelivery
 app.version=0.1
